Fixed layout and blocks visiblity on mobile breakpoint

--- a/sass/blocks/_stock-accordion.sass
+++ b/sass/blocks/_stock-accordion.sass
@@ -18,7 +18,7 @@ $block: ".stock-accordion"
 
   // $Accordion MOD: visible on mobiles
   &_state_visible-mobile
-    @media screen and (min-width: 960px)
+    @media screen and (min-width: 961px)
       display: none
 
 
