--- a/sass/blocks/_stock-activity-card.sass
+++ b/sass/blocks/_stock-activity-card.sass
@@ -24,7 +24,7 @@ $block: ".stock-activity-card"
 
   // $Activity card MOD: visible on mobiles
   &_state_visible-mobile
-    @media screen and (min-width: 960px)
+    @media screen and (min-width: 961px)
       display: none
 
 
