--- a/sass/blocks/_stock-button.sass
+++ b/sass/blocks/_stock-button.sass
@@ -149,7 +149,7 @@ $block: ".stock-button"
 
   // $Common button MOD: visible on mobiles
   &_state_visible-mobile
-    @media screen and (min-width: 960px)
+    @media screen and (min-width: 961px)
       display: none
 
   // $Common button MOD: hidden on mobiles
