--- a/sass/blocks/_stock-filter.sass
+++ b/sass/blocks/_stock-filter.sass
@@ -53,7 +53,7 @@ $block: ".stock-filter"
 
     // $Filter switch MOD: state visible on mobile
     &_state_visible-mobile
-      @media screen and (min-width: 960px)
+      @media screen and (min-width: 961px)
         display: none
 
     &:focus
@@ -70,7 +70,7 @@ $block: ".stock-filter"
 
     // $Filter dropdown MOD: visible on mobile
     &_state_visible-mobile
-      @media screen and (min-width: 960px)
+      @media screen and (min-width: 961px)
         display: none !important
 
 
@@ -89,7 +89,7 @@ $block: ".stock-filter"
 
     // $Filter group dropdown meta MOD: visible on mobile
     &_state_visible-mobile
-      @media screen and (min-width: 960px)
+      @media screen and (min-width: 961px)
         display: none
 
 
@@ -182,7 +182,7 @@ $block: ".stock-filter"
 
     // $Filter field MOD: visible on mobiles
     &_state_visible-mobile
-      @media screen and (min-width: 960px)
+      @media screen and (min-width: 961px)
         display: none
 
     // $Filter field MOD: hidden on mobiles
