--- a/sass/blocks/_stock-page-main.sass
+++ b/sass/blocks/_stock-page-main.sass
@@ -334,6 +334,6 @@ $block: ".stock-page-main"
 
     // $Page main container text MOD: visible on mobiles
     &_state_visible-mobile
-      @media screen and (min-width: 960px)
+      @media screen and (min-width: 961px)
         display: none
 
